# haskell-yesod-tiquets2

./: .gitmodules  Application.hs  Foundation.hs  LICENSE  Model.hs  README.md  aeroports-es.txt  aeroports-fr.txt  install-me.sh  keter.sh  sources.txt  tiquets2.cabal
Eines/: aeroports-de-paisos-inexistents.sql  aeroports-dun-pais.sql  aeroports.hi  aeroports.hs  aeroports.hs~  pendent.txt
Handler/: CercarUsuaris.hs  CercarUsuaris.hs~  CercarVols.hs  CercarVols.hs~  Globals.hs  Globals.hs~  HPaisos.hs  HPaisos.hs~  HXR_Aeroports.hs  HXR_Aeroports.hs~  Home.hs  Home.hs~  SetLang.hs  SetLang.hs~  UserInfo.hs  UserInfo.hs~  UserMsg.hs  UserMsg.hs~  UserVol.hs  UserVol.hs~  UserVolAddEdit.hs  UserVolAddEdit.hs~  UserVolList.hs  UserVolList.hs~  UserVolSendInterest.hs  UserVolSendInterest.hs~  UserVolVisit.hs  UserVolVisit.hs~  UtilHandlers.hs  UtilHandlers.hs~
Handler/antic/: UserVol.hs~  UserVolListVisit.hs
Util/: MissatgesAuth.hs  MissatgesAuth.hs~  MissatgesBreadCrumbs.hs  MissatgesBreadCrumbs.hs~  UtilAeroports.hs  UtilAeroports.hs~  UtilForms.hs  UtilForms.hs~  UtilPaisos.hi  UtilPaisos.hs  UtilPaisos.hs~  UtilQQHereDoc.hs
config/: admins.txt  admins.txt~  client_session_key.aes  keter.yaml  keter.yaml~  models  models~  paisos-iso3166-1.txt  paisos-iso3166-1.txt~  postgresql.yml  postgresql.yml~  routes  routes~  settings.yml  settings.yml~
messages/: ca.msg  ca.msg~  en.msg  en.msg~
static/css/: estil-meu.css  estil-meu.css~
static/img/: degradat.xcf
static/js/: jsdatepick-afegir-vol.js  jsdatepick-afegir-vol.js~  jsdatepick-cercar-vols.js  jsdatepick-cercar-vols.js~  myscript.js  myscript.js~
templates/: boto-back.hamlet  boto-enviar-msg-interes.hamlet  breadcrumbs.hamlet  breadcrumbs.hamlet~  credits.markdown  credits.markdown~  default-layout-wrapper.hamlet~  default-layout.hamlet  default-layout.hamlet~  form-canviar-veto.hamlet  form-canviar-veto.hamlet~  homepage.hamlet  homepage.hamlet~  jsdatepick-idiomes.julius  jsdatepick-idiomes.julius~  mydefault-layout.hamlet  mydefault-layout.hamlet~  novetats.markdown  novetats.markdown~  recent-flights.hamlet  recent-flights.hamlet~  tabulated-form-one-col.hamlet  tabulated-form-one-col.hamlet~  tabulated-form-put.hamlet~  tabulated-form-with-delete-art.hamlet  tabulated-form-with-delete-art.hamlet~  tabulated-form-with-delete.hamlet  tabulated-form-with-delete.hamlet~  tabulated-form.hamlet  tabulated-form.hamlet~  user-info-nou.hamlet  user-info-nou.hamlet~  user-list-flights.hamlet~  user-visit-flight.hamlet~  userinfo-admin-llistar-arts.hamlet  userinfo-admin-llistar-arts.hamlet~  userinfo-llistar.hamlet  userinfo-llistar.hamlet~  userinfo-visitar-camps.hamlet  userinfo-visitar-camps.hamlet~  (+21 more)
