name:              tiquets2
version:           0.1.0.28
license:           BSD3
license-file:      LICENSE
author:            Gabriel
maintainer:        Gabriel
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://www.xarxaire.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.UserInfo
                     Handler.SetLang
                     Handler.CercarVols
                     Handler.UserMsg
                     Handler.UserVolSendInterest
                     Handler.CercarUsuaris
                     Handler.Globals
                     Handler.HXR_Aeroports
                     Handler.UserVolAddEdit
                     Handler.UserVolList
                     Handler.UserVolVisit
                     Handler.HPaisos

    other-modules:   Util.UtilForms
                     Util.UtilPaisos
                     Util.UtilAeroports  
                     Util.MissatgesAuth
                     Handler.UserVol
                     Handler.UtilHandlers
                     Util.MissatgesBreadCrumbs 
                     -- Model.UtilAdmins
                     -- Util.UtilQQHereDoc

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                RecordWildCards
                PackageImports

    build-depends: base                          >= 4          && < 5
                 -- , yesod-platform                >= 1.1        && < 1.2
                 , yesod                         >= 1.1        && < 1.2
                 , yesod-core                    >= 1.1        && < 1.2
                 , yesod-auth                    >= 1.1        && < 1.2
                 , yesod-static                  >= 1.1        && < 1.2
                 , yesod-default                 >= 1.1        && < 1.2
                 , yesod-form                    >= 1.1.4.1        && < 1.2
                 , yesod-test                    >= 0.3        && < 0.4
                 , clientsession                 >= 0.8        && < 0.9
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 1.0        && < 1.1
                 , persistent-postgresql     >= 1.0        && < 1.1
                 , template-haskell
                 , hamlet                        >= 1.1        && < 1.2
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0        && < 1.1
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.3        && < 1.4
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 1.5        && < 1.7
                 , directory                     >= 1.1        && < 1.2
                 , warp                          >= 1.3        && < 1.4
                 , data-default
                 , time                          >= 1.4
                 , mime-mail
                 , blaze-html                    >= 0.5.1
                 , containers
                 , resourcet
                 , monad-logger
                 , esqueleto
                 , old-locale
                 , mdqq                          >= 0.6
                 , email-validate                >=0.2.6        && <0.3
                 , xmlgen
                 , blaze-builder
                 , crypto-pubkey-types                          < 0.2

                 -- , data-binary-ieee754                       < 0.4.3      
                 -- , binary
                 -- , binary-generic 

executable         tiquets2
    if flag(library-only)
        Buildable: False

    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , tiquets2
                     , yesod-default

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , tiquets2
                 , yesod-test
                 , yesod-default
                 , yesod-core
                 , persistent                    >= 1.0        && < 1.1
                 , persistent-postgresql     >= 1.0        && < 1.1
